    be now easily used by other batches (e,g, cg_vbm_longitudinal_multi.m).
(7) Removed all dartelwarp option because Dartel is now always used.
(8) Warped files are now without additional "r".
(9) Some editing in htlm files to consider new changes.

------------------------------------------------------------------------
r653 | gaser | 2014-11-21 14:13:42

M       CHANGES.txt
M       cg_vbm_run.m

Non-existing option dartelwarp was still used in cg_vbm_run.m.

------------------------------------------------------------------------
r654 | gaser | 2014-11-21 14:53:39

M       CHANGES.txt
MM      cg_vbm_extopts.m
MM      cg_vbm_opts.m
M       cg_vbm_write.m
 M      vbm_vol_groupwise_ls.m
 M      vbm_vol_series_align.m

In cg_vbm_write surface option was still linked to flag extopts.

------------------------------------------------------------------------
r655 | gaser | 2014-11-21 16:06:42

M       CHANGES.txt
M       cg_vbm_write.m

In cg_vbm_write ROI option was still linked to flag extopts.

------------------------------------------------------------------------
r656 | gaser | 2014-11-21 16:21:30

M       CHANGES.txt
M       cg_check_cov.m
M       cg_slice_overlay.m
M       cg_slice_overlay_ui.m
M       html/vbm12.html
M       vbm12.fig
M       vbm12.m

(1) Added TFCE button that is enabled if toolbox is installed.
(2) Added flag "func" to cg_slice_overlay.m.

------------------------------------------------------------------------
r657 | gaser | 2014-11-25 11:13:51

M       CHANGES.txt
M       html/vbm12.html
M       vbm12.m

Solved issue with missing function for longitduinal data in vbm12.m.

------------------------------------------------------------------------
r658 | gaser | 2014-11-25 11:46:03

M       CHANGES.txt
M       cg_vbm_write.m
M       html/vbm12.html

Replaced additional opt.print flag in cg_vbm_write.m by general vbm.print.

------------------------------------------------------------------------
r659 | gaser | 2014-11-25 15:26:44