@@ -28,15 +28,17 @@
         VBM12 preprocessing comprehends methods to reduce image interference, classify the brain and its major tissue classes and normalize the individual anatomy. 
         Furthermore, it allows the creation of the central surface with cortical thickness and folding measures. 
         The theoretical background can be found in the <a href="vbm12_methods.html">Methods</a> section.
+        <!-- papers to cite -->
       </p>
-      <!-- papers to cite -->
+      <!-- algo flow diagram -->
       
       <p>
         VBM12 also allows processing of other apes and monkeys. 
         First, you have to download the <a href="matlab:web('http://dbm.neuro.uni-jena.de/"','-browser');" target="_blank">animal templates and default parameter</a>.
         Next you have to <a href="matlab:vbm_set_cg_vbm_defaults">change the default file</a> for your primate.
+        <!-- papers to cite -->
       </p>
-      <!-- papers to cite -->
+      <!-- image of different species (Yp0) and ROIs -->
       
       <ul>
         <li>
@@ -57,7 +59,7 @@
             VBM12 uses adaptive denoising methods to allow a exact and stable segmentation for different levels of noise.
           </p>
           <p>
-            For the Local Adaptive Segmentation, the Skull-Stripping, and of the Cleanup function a strength parameter allows simple modifications, if the default segmentation does not fit for your requirements. 
+            For the denoising, the Local Adaptive Segmentation, the Skull-Stripping, and of the Cleanup function a strength parameter allows simple modifications, if the default segmentation does not fit for your requirements. 
             Setting the strength to 0 will deactivate the method. 
             Values smaller than the default value of 0.5 will run the functions with less power, whereas higher values (maximum=1) will increase the power.
           </p>
@@ -76,6 +78,9 @@
             The data can be accessed by external software or by using the <a class="function" href="matlab:vbm_io_xml">vbm_io_xml</a> and <a class="function" href="matlab:vbm_io_csv">vbm_io_csv</a> function.
              (see <a>Analysis of XML data</a>) 
              -->
+          </p>
+          <p>
+            
           </p>
           <p>
             VBM12 also allows the creation of the central cortical surface and the estimation of thickness and folding parameters.
